welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:24: error: type yellow is not a member of object java.awt.Color
    case 1 => setCouleurBrosse(): Color.yellow
                                        ^MethodsPicture:24: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
    case 1 => setCouleurBrosse(): Color.yellow
                              ^MethodsPicture:25: error: type red is not a member of object java.awt.Color
    case 2 => setCouleurBrosse(): Color.red
                                        ^MethodsPicture:25: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
    case 2 => setCouleurBrosse(): Color.red
                              ^MethodsPicture:26: error: type blue is not a member of object java.awt.Color
    case 3 => setCouleurBrosse(): Color.blue
                                        ^MethodsPicture:26: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
    case 3 => setCouleurBrosse(): Color.blue
                              ^MethodsPicture:27: error: type green is not a member of object java.awt.Color
    case 4 => setCouleurBrosse(): Color.green
                                        ^MethodsPicture:27: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
    case 4 => setCouleurBrosse(): Color.green
                              ^